2002-02-20  Sam Steingold  <sds@gnu.org>

	fixed bug #515604: (EVAL-WHEN (COMPILE)) no longer automatically
	writes to *.lib; you need EVAL-WHEN-COMPILE or both LOAD and COMPILE
	* compiler.lisp (c-write-lib): new function
	(c-eval-and-write-lib): renamed from c-eval-when-compile
	(compile-toplevel-form): respect the renaming
	(eval-when-compile): new macro: call C-EVAL-AND-WRITE-LIB at
	compile time
	(c-GLOBAL-FUNCTION-CALL): use it instead of (EVAL-WHEN (COMPILE))
	(c-EVAL-WHEN): write to *lib only when _both_ LOAD and COMPILE
	are specified; COMPILE-ONCE-ONLY is eliminated
	* init.lisp (eval-when-compile): added a bootstrap definition
	(defun): use EVAL-WHEN-COMPILE instead of (EVAL-WHEN (COMPILE))
	* clos.lisp (defmethod, defgeneric): ditto
	* macros1.lisp (defconstant): ditto
	* foreign1.lisp (DEF-LIB-CALL-OUT): ditto
	(DEF-CALL-OUT): use COMPILE situation instead of COMPILE-ONCE-ONLY
	and EVAL-WHEN-COMPILE instead of (EVAL-WHEN (COMPILE))
	(DEF-C-VAR, DEF-CALL-IN): use COMPILE situation
	instead of COMPILE-ONCE-ONLY

2002-02-17  Arseny Slobodjuck <ampy@ich.dvo.ru>

	smooth Ctrl-C, Ctrl-Break handling not depending on whether
	interrupted thread is alive when temp_interrupt_handler executes
	* win32aux.d: (interruptible_abort_code): new variable holds
	1+CtrlType after temp_interrupt_handler works, zero while
	temp_interrupt_handler is not called.
	(temp_interrupt_handler): check whether thread is alive before
	terminating it. Save result in new variable instead of use of
	thread exit code.
	(DoInterruptible): use interruptible_abort_code.

2002-02-18  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/wrap.lisp: require "linux" to avoid warnings

2002-02-13  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/linux.lisp (getdomainname, setdomainname)
	(gethostname, sethostname, mkstemp, realpath): uncommented and fixed
	* bindings/linuxlibc6/wrap.lisp: new file
	* bindings/linuxlibc6/Makefile, bindings/linuxlibc6/link.sh:
	added wrap.lisp
