@@ -3058,7 +3058,17 @@ echol "MANUALS = clisp.1 clisp.html \$(TXTFILES) \$(IMPNOTES)${manual_readline}"
 echol
 for f in ${IMPNOTES_FILES} ; do
   echol "${f} : ${DOCDIR_M}${f}"
-  echotab "\$(CP) ${DOCDIR_M}${f} ${f}"
+  echotab "\$(LN_S) ${DOCDIR_M}${f} ${f}"
+  echol
+done
+EMACS_FILES="clisp-coding.el clisp-indent.el clisp-indent.lisp";
+echol "FILES_EMACS = ${EMACS_FILES}"
+echol "emacs : \$(FILES_EMACS)"
+echodummyrule emacs
+echol
+for f in ${EMACS_FILES} ; do
+  echol "${f} : ${SRCTOPDIR}emacs${NEXT}${f}"
+  echotab "\$(LN_S) ${SRCTOPDIR}emacs${NEXT}${f} ${f}"
   echol
 done
 # On Unix, clisp.dvi must be built by "make all", because "make install" needs
@@ -3476,7 +3486,7 @@ if test "$HLN" != ln; then
   echotab "ln buildhln/hln${TEXE} hln${TEXE}"
   echol
 fi
-echol "distrib : force $needs modular manualx clisp.c distmakefile"
+echol "distrib : force $needs modular manualx emacs clisp.c distmakefile"
 echotab "\$(RM) \$(DISTFILE)"
 echotab "mkdir \$(TOPDIR)"
 # General documentation files.
@@ -3513,6 +3523,8 @@ echotab "mkdir \$(TOPDIR)/data"
 echotab "${HLN} data/* \$(TOPDIR)/data"
 echotab "mkdir \$(TOPDIR)/doc"
 echotab "${HLN} clisp.1 clisp.man${manual_dvi} clisp.html \$(TXTFILES) \$(IMPNOTES)${manual_readline}${manualx_readline} \$(TOPDIR)/doc"
+echotab "mkdir \$(TOPDIR)/emacs"
+echotab "${HLN} ${EMACS_FILES} \$(TOPDIR)/emacs"
 echotab "mkdir \$(TOPDIR)/src"
 echotab "${HLN} \$(LISPFILES) \$(FASFILES) \$(TOPDIR)/src"
 echotab "${HLN} clisp-link \$(TOPDIR)"
@@ -3538,7 +3550,7 @@ echol
 echol
 fi
 if [ $HSYS = acorn ] ; then
-  echol "distrib : force all manualx"
+  echol "distrib : force all manualx emacs"
   echotab "-cdir ^.!Clisp"
   echotab "\$(CP) lisp ^.!Clisp.lisp"
   echotab "squeeze ^.!Clisp.lisp"
@@ -3556,6 +3568,9 @@ if [ $HSYS = acorn ] ; then
   echotab "\$(CP) html.impnotes ^.!Clisp.html.impnotes"
   echotab "\$(CP) css.impnotes ^.!Clisp.css.impnotes"
   echotab "\$(CP) png.clisp ^.!Clisp.png.clisp"
+  echotab "\$(CP) el.clisp-coding ^.!Clisp.el.clisp-coding"
+  echotab "\$(CP) el.clisp-indent ^.!Clisp.el.clisp-indent"
+  echotab "\$(CP) lisp.clisp-indent ^.!Clisp.lisp.clisp-indent"
   echotab "settype ^.!Clisp.html.clisp FAF"
   echotab "-cdir ^.!Clisp.txt"
   for f in $DOC; do
@@ -3574,7 +3589,7 @@ if [ $HSYS = acorn ] ; then
 fi
 if [ $HOS = win32 ] ; then
   echol "# Distribution, to be executed on a Unix host or using Cygwin."
-  echol "distrib : force"
+  echol "distrib : force emacs"
   echotab "nroff -man clisp.1 > clisp.man"
   if [ $HOS = win32 ] ; then
     for f in clisp.html ; do
@@ -3596,6 +3611,8 @@ if [ $HOS = win32 ] ; then
   echotab "for f in clisp.1 clisp.man clisp.html \$(TXTFILES) \$(IMPNOTES) ; do \\"
   echotab "  if test -f \$\$f ; then cp -p \$\$f \$\$distdir/doc/\$\$f ; else cp -p \`echo \$\$f | tr '[A-Z]' '[a-z]'\` \$\$distdir/doc/\$\$f ; fi ; \\"
   echotab "done ; \\"
+  echotab "mkdir \$\$distdir/emacs; \\"
+  echotab "cp -p ${EMACS_FILES} \$\$distdir/emacs; \\"
   echotab "mkdir \$\$distdir/src ; \\"
   echotab "cp -p \$(LISPFILES) install.lisp \$\$distdir/src/ ; \\"
   echotab "chmod 755 \$\$distdir/. \$\$distdir/*/. ; \\"
